# easy-kanban

./: pyproject.toml
src/kanban/domain/entities/: board.py
